--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@nuxtjs/bulma": "^1.3.0",
     "ethers": "^5.0.19",
+    "fontsource-ubuntu": "^3.0.9",
     "jusdefi": "git+ssh://git@github.com:jusdefi/jusdefi",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.7",
