--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "devDependencies": {
     "@nuxtjs/bulma": "^1.3.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-nuxt": "^1.0.0",
+    "eslint-plugin-vue": "^7.1.0",
     "ethers": "^5.0.19",
     "fontsource-ubuntu": "^3.0.9",
     "jusdefi": "git+ssh://git@github.com:jusdefi/jusdefi",
