--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@nuxtjs/bulma": "^1.3.0",
+    "@nuxtjs/eslint-module": "^3.0.0",
     "eslint": "^7.12.1",
     "eslint-plugin-nuxt": "^1.0.0",
     "eslint-plugin-vue": "^7.1.0",
