--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jusdefi": "https://github.com/jusdefi/jusdefi",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.7",
-    "sass-loader": "^10.0.4"
+    "sass-loader": "^10.0.4",
+    "vue-material-design-icons": "^4.11.0"
   }
 }
