--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "jusdefi-dapp",
+  "name": "jusdefi-ui",
   "version": "0.0.0",
   "license": "UNLICENSED",
   "private": true,
-  "description": "JusDeFi front end",
+  "description": "JusDeFi user interface",
   "keywords": [
     "jusdefi",
     "ethereum",
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/jusdefi/jusdefi-dapp.git"
+    "url": "git+https://github.com/jusdefi/jusdefi-ui.git"
   },
   "devDependencies": {
     "@nuxtjs/bulma": "^1.3.0",
@@ -22,7 +22,7 @@
     "eslint-plugin-vue": "^7.1.0",
     "ethers": "^5.0.19",
     "fontsource-ubuntu": "^3.0.9",
-    "jusdefi": "https://github.com/jusdefi/jusdefi",
+    "jusdefi-contracts": "https://github.com/jusdefi/jusdefi-contracts",
     "node-sass": "^4.14.1",
     "nuxt": "^2.14.7",
     "sass-loader": "^10.0.4",
